--- a/css/index.css
+++ b/css/index.css
@@ -6,4 +6,63 @@
   text-decoration: none;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(233deg, 47%, 7%);
+}
+
+.main {
+  width: 350px;
+  background-color: hsl(244deg, 38%, 16%);
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.7rem;
+  margin-block: 2rem;
+}
+.main-header img {
+  border-radius: 0.7rem 0.7rem 0 0;
+}
+.main-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  text-align: center;
+  padding: 2.3rem 1.2rem;
+}
+.main-container-section-1 {
+  font-family: "Inter", sans-serif;
+}
+.main-container-section-1 h1 {
+  font-size: 2rem;
+  padding-bottom: 1rem;
+  color: #fff;
+}
+.main-container-section-1 h1 span {
+  color: hsl(277deg, 64%, 61%);
+}
+.main-container-section-1 p {
+  line-height: 200%;
+  color: hsla(0deg, 0%, 100%, 0.75);
+}
+.main-container-section-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.main-container-section-2 .cards {
+  font-family: "Lexend Deca", sans-serif;
+  line-height: 200%;
+}
+.main-container-section-2 .cards h2 {
+  color: #fff;
+  font-size: 1.8rem;
+}
+.main-container-section-2 .cards p {
+  color: hsla(0deg, 0%, 100%, 0.75);
+  text-transform: uppercase;
+  font-size: 0.8rem;
+}
+
 /*# sourceMappingURL=index.css.map */
